--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.10",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "http": "^0.0.1-security",
+    "osc": "^2.4.4",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
