--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
+    "moment": "^2.30.1",
     "osc": "^2.4.4",
-    "ws": "^8.17.0"
+    "ws": "^8.17.0",
+    "yahoo-finance2": "^2.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
